Remove mailing list + copy changes

--- a/_data/temples.yaml
+++ b/_data/temples.yaml
@@ -22,7 +22,7 @@ austria:
 
 belgium:
   -
-    title: Wat Phra Dhammakaya Benelux
+    title: Wat Phra Dhammakaya Belgium
     content: |
       <address>
         <small>
