consolidate apply link; add call to action to index page; tweak program details content;

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ nav_list:
     nav_title: "Being a Monk"
   - path: about/index.html
     nav_title: "Program details"
+
+form_link: https://forms.gle/KxcHbeLUMkrtbVQ68
